<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context="com.se319s18a9.util3d.Fragments.CreateProjectFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/s_fragment_createProject_editText_hint_projectName"
            android:id="@+id/fragment_createProject_editText_projectName"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/s_fragment_createProject_editText_hint_location"
            android:id="@+id/fragment_createProject_editText_location"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:entries="@array/s_fragment_createProject_spinner_utilities"
        android:id="@+id/fragment_createProject_spinner_utilites"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        style="@style/Widget.AppCompat.Spinner.Underlined"/>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/s_fragment_createProject_editText_hint_organization"
            android:id="@+id/fragment_createProject_editText_organization"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <Button
            android:background="@color/colorAccent"
            android:id="@+id/fragment_createProject_button_create"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/s_fragment_createProject_button_create"
            tools:ignore="ButtonStyle" />

        <Button
            android:background="@color/colorAccent"
            android:id="@+id/fragment_createProject_button_cancel"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/s_fragment_createProject_button_cancel"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
